# RTClosureJAX

./: LICENSE.txt  README.md  setup.cfg  setup.py
.github/workflows/: tests.yml
Examples/: RunModifiedSuOlson.py  RunSuOlson.py  TrainSuOlson.py
RTClosureJAX/: RT_equations.py  RunModifiedSuOlson.py  RunSuOlson.py  TrainSuOlson.py  __init__.py  closure_funcs.py  optimizer.py  solver.py  utils.py
RTClosureJAX/core/: RT_equations.py  closure_funcs.py  optimizer.py  solver.py  utils.py
SimData/: opt_closure_params.json
Tests/: conservation.py
