[metadata]
name = RTClosureJAX
version = 0.0.1
description = Example of learning closure relations for Radiation Transport
long_description = file: README.md
author = Aidan Crilly
author_email = ac116@ic.ac.uk
url = https://github.com/aidancrilly/RTClosureJAX
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = ~=3.9
install_requires = 
    numpy
    scipy
	matplotlib
	jax
	jaxlib
	diffrax
	optax